--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       </section>
     </main>
     <footer>
-      <p>© 2025 龙舟赛事管理 | <a href="index.html">首页</a></p>
+      <p>© 2025 横琴粤澳深度合作区龙舟赛 | <a href="index.html">首页</a></p>
     </footer>
   </body>
 </html>
