--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>龙舟赛事管理平台</title>
+    <title>横琴粤澳深度合作区龙舟赛事平台</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>龙舟赛事管理平台</h1>
+      <h1>横琴粤澳深度合作区龙舟赛事</h1>
       <nav>
-        <a href="talent.html">人才库</a>
+        <a href="talent.html">公司人员介绍</a>
         <a href="contact.html">联系我们</a>
       </nav>
     </header>
@@ -27,7 +27,7 @@
           <p>提供专业的龙舟赛事策划服务，确保赛事顺利进行。</p>
         </div>
         <div class="business-item">
-          <h3>运动员培训</h3>
+          <h3>活动组织</h3>
           <img
             src="images/training.jpg"
             alt="日常活动组织"
