--- a/talent.html
+++ b/talent.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>人才库</title>
+    <title>公司成员</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>人才库</h1>
+      <h1>公司成员</h1>
       <nav>
         <a href="index.html">首页</a>
         <a href="contact.html">联系我们</a>
@@ -16,16 +16,16 @@
     </header>
     <main>
       <section id="talent-list">
-        <h2>龙舟运动员名单</h2>
+        <h2>公司成员介绍</h2>
         <ul>
-          <li>张三 - 主力划手</li>
-          <li>李四 - 舵手</li>
-          <li>王五 - 后备划手</li>
+          <li>李泽维 - 总经理</li>
+          <li>罗上鏗 - 副总经理</li>
+          <li>关林晖 - 业务员</li>
         </ul>
       </section>
     </main>
     <footer>
-      <p>© 2025 龙舟赛事管理 | <a href="contact.html">联系我们</a></p>
+      <p>© 2025 横琴粤澳深度合作区龙舟赛事平台 | <a href="contact.html">联系我们</a></p>
     </footer>
   </body>
 </html>
