--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <h1>横琴粤澳深度合作区龙舟赛事</h1>
       <nav>
-        <a href="talent.html">公司人员介绍</a>
+        <a href="talent.html">公司成员</a>
         <a href="contact.html">联系我们</a>
       </nav>
     </header>
