--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       <h1>联系我们</h1>
       <nav>
         <a href="index.html">首页</a>
-        <a href="talent.html">人才库</a>
+        <a href="talent.html">公司成员</a>
       </nav>
     </header>
     <main>
@@ -25,7 +25,7 @@
       </section>
     </main>
     <footer>
-      <p>© 2025 横琴粤澳深度合作区龙舟赛 | <a href="index.html">首页</a></p>
+      <p>© 2025 横琴粤澳深度合作区龙舟赛事平台 | <a href="index.html">首页</a></p>
     </footer>
   </body>
 </html>
