--- a/index.html
+++ b/index.html
@@ -349,17 +349,17 @@
         </div>
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
-          <p>contact@yichenggewu.com</p>
+          <p>hqycgw@163.com</p>
         </div>
         <div class="contact-item">
           <i class="fas fa-phone"></i>
-          <p>+86 0756-XXXXXXX</p>
+          <p>+86 13168677659</p>
         </div>
       </div>
     </section>
 
     <footer>
-      <p>&copy; 2024 横琴意诚格物文体发展有限公司 版权所有</p>
+      <p>&copy; 2025 横琴意诚格物文体发展有限公司 版权所有</p>
     </footer>
 
     <!-- 简单的交互脚本 -->
